# hyprland-settings

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
docs/: ALL-BLOCKED-ROWS-AUTONOMOUS-WRITABILITY-REVIEW-LOG.md  ALL-BLOCKED-ROWS-PRE-ENABLEMENT-PROOF-REVIEW-LOG.md  AUTORELOAD-DECISION-PATH.md  CHATGPT-HYPRLAND-SETTINGS-HANDOFF.md  COMPLETION-READINESS-HARDENING-REVIEW-LOG.md  CONFIG-PICKER-PREVIEW-FLOW-REVIEW-LOG.md  CONFIG-PREVIEW-LAYERED-WRITE-TARGET-FOUNDATION-REVIEW-LOG.md  CONFIG-SELECTION-STATE-PICKER-SCAFFOLD-REVIEW-LOG.md  CONFIG_PERSISTENCE_VALIDATION.md  CONFIG_PERSISTENCE_VALIDATION_DESIGN.md  CONNECTED-FILE-DETAIL-UI-REVIEW-LOG.md  CONNECTED-FILES-REVIEW-UI-REVIEW-LOG.md  COPIED-CONFIG-TREE-PROOF-REVIEW-LOG.md  CURRENT-PROJECT-HANDOFF.md  CURSOR-DEFAULT-MONITOR-RUNTIME-ORACLE-PROOF-REVIEW-LOG.md  DASHBOARD-CARD-NAVIGATION-ROW-LIST-COPY-POLISH-REVIEW-LOG.md  DASHBOARD-CONFIG-PAGE-SCAFFOLD-REVIEW-LOG.md  DASHBOARD-SIDEBAR-SIMPLIFICATION-REVIEW-LOG.md  DEEP-APPROVAL-CARD-DATA-REVIEW-LOG.md  DEFAULT-DISABLED-PRODUCTION-ACTIVATION-APPROVAL-UX-AND-DRY-RUN-POLICY-REVIEW-LOG.md  DEFAULT-DISABLED-PRODUCTION-ACTIVATION-CONTROL-REVIEW-LOG.md  DEFAULT-DISABLED-PRODUCTION-ACTIVATION-DECISION-REVIEW-LOG.md  DEFAULT-DISABLED-PRODUCTION-ACTIVATION-DRAFT-EDIT-REVIEW-LOG.md  DEFAULT-DISABLED-PRODUCTION-ACTIVATION-DRAFT-PERSISTENCE-BOUNDARY-REVIEW-LOG.md  DEFAULT-DISABLED-PRODUCTION-ACTIVATION-DRAFT-REVIEW-LOG.md  DEFAULT-DISABLED-PRODUCTION-ACTIVATION-FINAL-DECISIONS-REVIEW-LOG.md  DEFAULT-DISABLED-PRODUCTION-ACTIVATION-FORM-FIELDS-REVIEW-LOG.md  (+125 more)
(+815 files in other folders)
