[package]
name = "hyprland-settings"
version = "0.2.0-rc.1"
edition = "2021"
description = "GTK4/libadwaita Hyprland settings app with guarded safe-batch config writes"
license = "MIT"

[[bin]]
name = "hyprland-settings"
path = "src/main.rs"

[dependencies]
adw = { package = "libadwaita", version = "0.9.1" }
anyhow = "1"
gtk4 = "0.11.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
