[package]
name = "hyprland-settings"
version = "0.2.0"
edition = "2021"
description = "GTK4/libadwaita Hyprland settings app with guarded drift-safe atomic writes"
license = "MIT"

[[bin]]
name = "hyprland-settings"
path = "src/main.rs"

[dependencies]
adw = { package = "libadwaita", version = "0.9.1", features = ["v1_5"] }
anyhow = "1"
gtk4 = "0.11.3"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
